--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page not found. 404 ERROR</title>
+		<title>404 Error</title>
 	</head>
 	<body>
-		<h1>Server could not find page specified by URL.</h1>
+		<h6>404 Error</title>
+		<h1>Server could not find page specified by URL provided.</h1>
 	</body>
 </html>
