--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,7 +4,7 @@
 		<title>404 Error</title>
 	</head>
 	<body>
-		<h6>404 Error</title>
-		<h1>Server could not find page specified by URL provided.</h1>
+		<h1>404 Error</h1>
+		<h4>Server could not find page specified by URL provided.</h4>
 	</body>
 </html>
