Optimized smooth scrolling, js->css

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <% include partials/general_pages/_layout.ejs %>
-    <body id="page-top">
+    <body>
         <!-- Navigation -->
         <% include partials/general_pages/_navigation.ejs %>
         <!-- Profile area //TODO: Send user info to partial -->
