--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>404 Error</title>
-	</head>
-	<body>
-		<h1>404 Error</h1>
-		<h4>Server could not find page specified by URL provided.</h4>
-	</body>
+    <% include partials/general_pages/_layout.ejs %>
+    <body>
+        <h1>404 Error</h1>
+        <h4>Server could not find page specified by URL provided.</h4>
+    </body>
 </html>
