User page formatting

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
         <% include partials/landing_page/_about.ejs %>
         <!-- Projects -->
         <% include partials/landing_page/_users.ejs %>
+        <!-- Contact Area if we want it    
+        <% include partials/landing_page/_contact.ejs %> -->
         <!-- Footer -->
         <% include partials/general_pages/_footer.ejs %>
     </body>
