--- a/views/partials/profile_page/_farmer.ejs
+++ b/views/partials/profile_page/_farmer.ejs
@@ -1,4 +1,6 @@
-<h3>Farmer</h3>
+<section class="farmer-section">
+        <h3>Farmer</h3>
+</section>
 <!--
     Area for the user profile page regarding the farmer section
     Farmer section is used by local farmers to advertise their grown
