--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,18 +5,18 @@
         <!-- Navigation -->
         <% include partials/general_pages/_navigation.ejs %>
         <!-- Profile area //TODO: Send user info to partial -->
-        <% include partials/profile_page/_profile_info.ejs %>
+        <% include partials/profile_page/_profile_header.ejs %>
         <!-- Content area (Tri-tab profile based marketplace)
             Must be done like this...no nested partials
             //TODO: Send user info to partial -->
         <section class="profile-section">
-            <nav>
-                <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    <a class="nav-link active" id="nav-farmer-tab" data-toggle="tab" href="#nav-farmer" role="tab" aria-controls="nav-farmer" aria-selected="true">Farmer</a>
-                    <a class="nav-link" id="nav-grocer-tab" data-toggle="tab" href="#nav-grocer" role="tab" aria-controls="nav-grocer" aria-selected="false">Grocer</a>
-                    <a class="nav-link" id="nav-community-tab" data-toggle="tab" href="#nav-community" role="tab" aria-controls="nav-community" aria-selected="false">Community</a>
+            <div class="container">
+                <div class="nav nav-tabs nav-justified" id="nav-tab" role="tablist">
+                    <a class="nav-item nav-link profile-nav active" id="nav-farmer-tab" data-toggle="tab" href="#nav-farmer" role="tab" aria-controls="nav-farmer" aria-selected="true">Farmer</a>
+                    <a class="nav-item nav-link profile-nav" id="nav-grocer-tab" data-toggle="tab" href="#nav-grocer" role="tab" aria-controls="nav-grocer" aria-selected="false">Grocer</a>
+                    <a class="nav-item nav-link profile-nav" id="nav-community-tab" data-toggle="tab" href="#nav-community" role="tab" aria-controls="nav-community" aria-selected="false">Community</a>
                 </div>
-            </nav>
+            </div>
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-farmer" role="tabpanel" aria-labelledby="nav-farmer-tab"><% include partials/profile_page/_farmer.ejs %></div>
                 <div class="tab-pane fade" id="nav-grocer" role="tabpanel" aria-labelledby="nav-grocer-tab"><% include partials/profile_page/_grocer.ejs %></div>
