--- a/views/partials/general_pages/_navigation.ejs
+++ b/views/partials/general_pages/_navigation.ejs
@@ -11,7 +11,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#about">About</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#users">Users</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/user">Signin/Signup</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/profile">Test user page</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/profile">Test user</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/market">Marketplace</a></li>
             </ul>
         </div>
     </div>
