--- a/views/partials/general_pages/_navigation.ejs
+++ b/views/partials/general_pages/_navigation.ejs
@@ -1,7 +1,7 @@
 <!-- Landing page navigation bar -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Cropshare</a>
+        <a class="navbar-brand js-scroll-trigger" href="/">Cropshare</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu
             <i class="fas fa-bars"></i>
         </button>
