--- a/views/partials/profile_page/_profile_header.ejs
+++ b/views/partials/profile_page/_profile_header.ejs
@@ -1,3 +1,14 @@
 <section class="profile-header-section">
-    
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-2"><img class="profile-img" height="100" src="images/test_profile_pic.png" alt="" /></div>
+            <div class="col-lg-8">
+                <div class="row">
+                    <div class="col-lg-8"><h2>[John Doe]</h2></div>
+                    <div class="col-lg-8">(123)345-5678</div>
+                    <div class="col-lg-8">Produce produced (lbs): 200</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
