--- a/views/partials/profile_page/_profile_header.ejs
+++ b/views/partials/profile_page/_profile_header.ejs
@@ -1,8 +1,8 @@
 <section class="profile-header-section">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-2"><img class="profile-img" height="100" src="images/test_profile_pic.png" alt="" /></div>
-            <div class="col-lg-8">
+            <div class="col-xl-2 col-lg-2 col-md-2 col-xs-3"><img class="profile-img" height="100" src="images/test_profile_pic.png" alt="" /></div>
+            <div class="col-xl-10 col-lg-10 col-md-10 col-xs-9">
                 <div class="row">
                     <div class="col-lg-8"><h2>[John Doe]</h2></div>
                     <div class="col-lg-8">(123)345-5678</div>
