Added marketplace page

--- a/views/marketplace.ejs
+++ b/views/marketplace.ejs
@@ -4,7 +4,14 @@
     <body>
         <!-- Navigation -->
         <% include partials/general_pages/_navigation.ejs %>
-        <h1>Marketplace!</h1>
+        <!-- Categories partial (left side) {Selling, buying, providing} -->
+        <div class="container">
+          <div class="row">
+            <% include partials/market_page/_categories.ejs %>
+            <!-- Shop area -->
+            <% include partials/market_page/_shop.ejs %>
+        </div>
+      </div>
         <!-- Footer -->
         <% include partials/general_pages/_footer.ejs %>
     </body>
