--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10598,12 +10598,11 @@ body {
   background-attachment: scroll;
   background-size: cover;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
-  height: 35vh;
-  margin: 30px 0 0;
+  height: 100vh;
+  margin: 50px 0 0;
 }
 .profile-header-section{
     background: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%);
@@ -10617,4 +10616,13 @@ body {
     display: block;
     max-width: 100%;
     height: auto;
+}
+.farmer-section,
+.grocer-section{
+
+}
+.farmer-list-group li,
+.grocer-list-group li{
+    background-color: transparent;
+    border-color: #e9ecef #e9ecef #dee2e6;
 }
