--- a/views/partials/profile_page/_farmer.ejs
+++ b/views/partials/profile_page/_farmer.ejs
@@ -1,5 +1,51 @@
 <section class="farmer-section">
-        <h3>Farmer</h3>
+        <ul class="list-group farmer-list-group">
+            <li class="list-group-item farmer-list-group-item">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-2 col-lg-2 col-md-2 col-xs-3"><img class="farmer-img" height="100" src="images/test_food_image.png" alt="" /></div>
+                        <div class="col-xl-9 col-lg-9 col-md-9 col-xs-8">
+                            <div class="row">
+                                <div class="col-lg-8"><h2>[Name of Item]</h2></div>
+                                <div class="col-lg-8">[Amount of the Item]</div>
+                                <div class="col-lg-8">[Price of the Item]</div>
+                            </div>
+                        </div>
+                        <div class="col-xl-1 col-lg-1 col-md-1 col-xs-1">[Edit]<!-- TODO: onclick form function --></div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item farmer-list-group-item">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-2 col-lg-2 col-md-2 col-xs-3"><img class="farmer-img" height="100" src="images/test_food_image.png" alt="" /></div>
+                        <div class="col-xl-9 col-lg-9 col-md-9 col-xs-8">
+                            <div class="row">
+                                <div class="col-lg-8"><h2>[Name of Item]</h2></div>
+                                <div class="col-lg-8">[Amount of the Item]</div>
+                                <div class="col-lg-8">[Price of the Item]</div>
+                            </div>
+                        </div>
+                        <div class="col-xl-1 col-lg-1 col-md-1 col-xs-1">[Edit]</div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item farmer-list-group-item">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-2 col-lg-2 col-md-2 col-xs-3"><img class="farmer-img" height="100" src="images/test_food_image.png" alt="" /></div>
+                        <div class="col-xl-9 col-lg-9 col-md-9 col-xs-8">
+                            <div class="row">
+                                <div class="col-lg-8"><h2>[Name of Item]</h2></div>
+                                <div class="col-lg-8">[Amount of the Item]</div>
+                                <div class="col-lg-8">[Price of the Item]</div>
+                            </div>
+                        </div>
+                        <div class="col-xl-1 col-lg-1 col-md-1 col-xs-1">[Edit]</div>
+                    </div>
+                </div>
+            </li>
+        </ul>
 </section>
 <!--
     Area for the user profile page regarding the farmer section
