--- a/views/partials/profile_page/_grocer.ejs
+++ b/views/partials/profile_page/_grocer.ejs
@@ -1,6 +1,51 @@
-<h3>Grocer</h3>
+<section class="grocer-section">
+        <ul class="list-group grocer-list-group">
+            <li class="list-group-item grocer-list-group-item">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-2 col-lg-2 col-md-2 col-xs-3"><img class="grocer-img" height="100" src="images/grocer_food_image.png" alt="" /></div>
+                        <div class="col-xl-9 col-lg-9 col-md-9 col-xs-8">
+                            <div class="row">
+                                <div class="col-lg-8"><h2>[Name of Requested Item]</h2></div>
+                                <div class="col-lg-8">[Amount of the Item]</div>
+                            </div>
+                        </div>
+                        <div class="col-xl-1 col-lg-1 col-md-1 col-xs-1">[Edit]<!-- TODO: onclick form function --></div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item grocer-list-group-item">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-2 col-lg-2 col-md-2 col-xs-3"><img class="grocer-img" height="100" src="images/grocer_food_image.png" alt="" /></div>
+                        <div class="col-xl-9 col-lg-9 col-md-9 col-xs-8">
+                            <div class="row">
+                                <div class="col-lg-8"><h2>[Name of Requested Item]</h2></div>
+                                <div class="col-lg-8">[Amount of the Item]</div>
+                            </div>
+                        </div>
+                        <div class="col-xl-1 col-lg-1 col-md-1 col-xs-1">[Edit]</div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item grocer-list-group-item">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-2 col-lg-2 col-md-2 col-xs-3"><img class="grocer-img" height="100" src="images/grocer_food_image.png" alt="" /></div>
+                        <div class="col-xl-9 col-lg-9 col-md-9 col-xs-8">
+                            <div class="row">
+                                <div class="col-lg-8"><h2>[Name of Requested Item]</h2></div>
+                                <div class="col-lg-8">[Amount of the Item]</div>
+                            </div>
+                        </div>
+                        <div class="col-xl-1 col-lg-1 col-md-1 col-xs-1">[Edit]</div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+</section>
 <!--
-    Area for the user profile page regarding the grocer section
-    Grocer section advertises what produce they are in demand of
-    and connects them with local farmers
+    Area for the user profile page regarding the farmer section
+    Farmer section is used by local farmers to advertise their grown
+    crops as well as their land they would offer for community use
 -->
