--- a/views/partials/profile_page/_profile_header.ejs
+++ b/views/partials/profile_page/_profile_header.ejs
@@ -5,8 +5,8 @@
             <div class="col-xl-10 col-lg-10 col-md-10 col-xs-9">
                 <div class="row">
                     <div class="col-lg-8"><h2>[John Doe]</h2></div>
-                    <div class="col-lg-8">(123)345-5678</div>
-                    <div class="col-lg-8">Produce produced (lbs): 200</div>
+                    <div class="col-lg-8">[Contact Information]</div>
+                    <div class="col-lg-8">[Profile Statistics]</div>
                 </div>
             </div>
         </div>
