--- a/views/partials/general_pages/_layout.ejs
+++ b/views/partials/general_pages/_layout.ejs
@@ -19,4 +19,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Core theme JS-->
     <script src="javascripts/scripts.js"></script>
+    <script src="javascripts/signin.js"></script>
 </head>
