removed 404 routing problem

--- a/views/partials/user_page/_signup.ejs
+++ b/views/partials/user_page/_signup.ejs
@@ -12,7 +12,7 @@
         	</form>
         </div>
         <div class="form-container sign-in-container">
-        	<form class="signin-form" action="/user/login">
+        	<form class="signin-form" action="/user">
         		<h1 class="signin-label">Sign in</h1>
         		<input class="signin-input" id="email-sign" type="email" placeholder="Email"/>
         		<input class="signin-input" id="pwrd-sign" type="password" placeholder="Password"/>
