--- a/views/partials/user_page/_signup.ejs
+++ b/views/partials/user_page/_signup.ejs
@@ -4,20 +4,20 @@
         <div class="form-container sign-up-container">
         	<form class="signin-form" action="/user/signup">
         		<h1 class="signin-label">Sign Up</h1>
-        		<input class="signin-input" type="text" placeholder="Name" />
-        		<input class="signin-input" type="email" placeholder="Email" />
-                <input class="signin-input" type="password" placeholder="Password" />
-                <input class="signin-input" type="password" placeholder="Confirm Password" />
-        		<button class="btn-sign">Sign Up</button>
+        		<input class="signin-input" id="name-reg" type="text" placeholder="Name"/>
+        		<input class="signin-input" id="email-reg" type="email" placeholder="Email"/>
+                	<input class="signin-input" id="pwrd-reg" type="password" placeholder="Password" />
+                	<input class="signin-input" id="pwrd-conf" type="password" placeholder="Confirm Password"/>
+        		<button class="btn-sign" onclick="registerUser(document.getElementById('email-reg').value, document.getElementById('name-reg').value, document.getElementById('pwrd-reg').value, document.getElementById('pwrd-conf').value)">Sign Up</button>
         	</form>
         </div>
         <div class="form-container sign-in-container">
-        	<form class="signin-form" action="/user/login">
+        	<form class="signin-form" action="/user">
         		<h1 class="signin-label">Sign in</h1>
-        		<input class="signin-input" type="email" placeholder="Email" />
-        		<input class="signin-input" type="password" placeholder="Password" />
+        		<input class="signin-input" id="email-sign" type="email" placeholder="Email"/>
+        		<input class="signin-input" id="pwrd-sign" type="password" placeholder="Password"/>
         		<a class="signin-link" href="#">Forgot your password?</a>
-        		<button class="btn-sign">Sign In</button>
+        		<button class="btn-sign" onclick="loginValAuth(document.getElementById('email-sign').value, document.getElementById('pwrd-sign').value)">Sign In</button>
         	</form>
         </div>
         <div class="overlay-container">
