--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,3 +25,6 @@
         <% include partials/general_pages/_footer.ejs %>
     </body>
 </html>
+<!--
+    //TODO: I'm going to re-work this entire page, so don't get attached to the formatting. ejs doesn't allow for nested partials because...?...so instead of learning handlebars...I'm making code ugly...:)
+-->
