--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4435,9 +4435,8 @@ input[type=button].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid #fff;
   border-radius: 0.25rem;
 }
 .card > hr {
@@ -4501,7 +4500,7 @@ input[type=button].btn-block {
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  border-top: 1px solid #fff;
 }
 .card-footer:last-child {
   border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
@@ -5159,7 +5158,7 @@ a.badge-black:focus, a.badge-black.focus {
   display: block;
   padding: 0.75rem 1.25rem;
   background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid #fff;
 }
 .list-group-item:first-child {
   border-top-left-radius: inherit;
@@ -10591,7 +10590,7 @@ body {
   padding: 5rem 0;
 }
 /* Profile Page Content */
-.profile-section {
+.profile-section{
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../images/bg-signup.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -10617,10 +10616,6 @@ body {
     max-width: 100%;
     height: auto;
 }
-.farmer-section,
-.grocer-section{
-
-}
 .farmer-list-group li,
 .grocer-list-group li{
     background-color: transparent;
@@ -10629,4 +10624,26 @@ body {
 .farmer-modal,
 .grocer-modal{
     color:black;
+}
+.marketplace{
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../images/bg-signup.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+}
+.market-section{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    height: 100vh;
+    margin: 100px 0 0;
+}
+.market-item-card{
+    background-color: transparent;
+    border-color: #e9ecef #e9ecef #dee2e6;
+}
+.card-body a:hover{
+    color:white;
 }
