--- a/views/partials/market_page/_categories.ejs
+++ b/views/partials/market_page/_categories.ejs
@@ -1,7 +1,7 @@
 <div class="col-lg-3">
     <h1 class="my-4">Shop Name</h1>
-    <div class="list-group">
-        <a href="#" class="list-group-item">Farmers</a>
-        <a href="#" class="list-group-item">Grocers</a>
+    <div class="list-group bg-transparent">
+        <a href="#" class="list-group-item bg-transparent">Farmers</a>
+        <a href="#" class="list-group-item bg-transparent">Grocers</a>
     </div>
 </div>
