--- a/views/partials/profile_page/_farmer_post.ejs
+++ b/views/partials/profile_page/_farmer_post.ejs
@@ -10,7 +10,7 @@
                 </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-2 col-xs-2">
-                <button type="button" class="btn btn-outline-light btn-sm" id="farmer-modal-button-<%= index %>" data-toggle="modal" data-target="#farmer-modal" data-name="user.farmer.itemlist.i.name" data-quantity="user.farmer.itemlist.i.quantity" data-price="user.farmer.itemlist.i.price">Edit</button>
+                <button type="button" class="btn btn-outline-light btn-sm" id="farmer-modal-button-<%= index %>" data-toggle="modal" data-target="#farmer-modal-<%= index %>" data-name="user.farmer.itemlist.i.name" data-quantity="user.farmer.itemlist.i.quantity" data-price="user.farmer.itemlist.i.price">Edit</button>
             </div>
         </div>
     </div>
