--- a/views/partials/market_page/_item.ejs
+++ b/views/partials/market_page/_item.ejs
@@ -1,15 +1,23 @@
+<!--
+DEFINE:
+item-name
+item-price
+item-description
+item-seller
+-->
+
 <div class="col-lg-4 col-md-6 mb-4 market-item-card">
     <div class="card h-100">
         <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
         <div class="card-body">
             <h4 class="card-title">
-                <a href="#">marketplace.itemlist.<%= index %>.name</a>
+                <a href="#"><%= item_name %></a>
             </h4>
-            <h5>marketplace.itemlist.<%= index %>.price</h5>
-            <p class="card-text">marketplace.itemlist.<%= index %>.description</p>
+            <h5>$<%= item_price %></h5>
+            <p class="card-text"><%= item_description %></p>
         </div>
         <div class="card-footer">
-            <small class="market-card-footer">marketplace.itemlist.<%= index %>.seller</small>
+            <small class="market-card-footer"><%= item_seller %></small>
         </div>
     </div>
 </div>
