--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,5 @@
 @charset "UTF-8";
 
-
-
 /*
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -66,9 +64,7 @@
 
 html {
   font-family: sans-serif;
-
   scroll-behavior: smooth;
-
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -4439,8 +4435,9 @@ input[type=button].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
+  background-color: #fff;
   background-clip: border-box;
-  border: 1px solid #fff;
+  border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
 .card > hr {
@@ -4504,7 +4501,7 @@ input[type=button].btn-block {
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid #fff;
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 .card-footer:last-child {
   border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
@@ -5162,7 +5159,7 @@ a.badge-black:focus, a.badge-black.focus {
   display: block;
   padding: 0.75rem 1.25rem;
   background-color: #fff;
-  border: 1px solid #fff;
+  border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .list-group-item:first-child {
   border-top-left-radius: inherit;
@@ -10594,7 +10591,7 @@ body {
   padding: 5rem 0;
 }
 /* Profile Page Content */
-.profile-section{
+.profile-section {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../images/bg-signup.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -10620,6 +10617,10 @@ body {
     max-width: 100%;
     height: auto;
 }
+.farmer-section,
+.grocer-section{
+
+}
 .farmer-list-group li,
 .grocer-list-group li{
     background-color: transparent;
@@ -10628,31 +10629,4 @@ body {
 .farmer-modal,
 .grocer-modal{
     color:black;
-}
-.marketplace{
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../images/bg-signup.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-size: cover;
-}
-.market-section{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    font-family: 'Montserrat', sans-serif;
-    height: 100vh;
-    margin: 100px 0 0;
-}
-.market-item-card{
-    background-color: transparent;
-    border-color: #e9ecef #e9ecef #dee2e6;
-}
-.marketplace-nav{
-    border:1px solid white;
-}
-.marketplace-nav:hover,
-.card-body a:hover,
-.list-group-item:hover{
-    color:white;
 }
