Restored the linkage between server side and browser side on the forgot password page.

--- a/views/partials/user_page/_signup.ejs
+++ b/views/partials/user_page/_signup.ejs
@@ -16,7 +16,7 @@
         		<h1 class="signin-label">Sign in</h1>
         		<input class="signin-input" id="email-sign" name="email" type="email" placeholder="Email"/>
         		<input class="signin-input" id="pwrd-sign" name="password" type="password" placeholder="Password"/>
-        		<a class="signin-link" href="#">Forgot your password?</a>
+        		<a class="signin-link" href="/forgotpwd">Forgot your password?</a>
         		<button class="btn-sign" type="submit">Sign In</button>
 
         	</form>
