Cleaned up parts of the marketplace and profile page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10630,3 +10630,11 @@ body {
 .grocer-modal{
     color:black;
 }
+.marketplace-nav{
+    border:1px solid white;
+}
+.marketplace-nav:hover,
+.card-body a:hover,
+.list-group-item:hover{
+    color:white;
+}
