--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,21 +20,18 @@
                 <div class="tab-pane fade show active" id="nav-farmer" role="tabpanel" aria-labelledby="nav-farmer-tab">
                     <section class="farmer-section">
                         <ul class="list-group farmer-list-group">
-                            <li class="list-group-item farmer-list-group-item">
-                                <%- include('partials/profile_page/_farmer_post.ejs', {index: '1'}) %>
-                                <%- include('partials/profile_page/_farmer_post.ejs', {index: '2'}) %>
-                                <%- include('partials/profile_page/_farmer_post.ejs', {index: '3'}) %>
-                                <%- include('partials/profile_page/_farmer_post.ejs', {index: '4'}) %>
-                            </li>
+                            <%- include('partials/profile_page/_farmer_post.ejs', {user_index:"1", item_name:"Potato", item_quantity:"1", item_price:"300.00", item_description:"One big potato"}) %>
+                            <%- include('partials/profile_page/_farmer_post.ejs', {user_index:"2", item_name:"Tomatoes", item_quantity:"500", item_price:"14.99", item_description:"300 pounds of tomatoes"}) %>
+                            <%- include('partials/profile_page/_farmer_post.ejs', {user_index:"3", item_name:"Carrot", item_quantity:"1", item_price:"12.34", item_description:"It orange"}) %>
+                            <%- include('partials/profile_page/_farmer_post.ejs', {user_index:"4", item_name:"Potato", item_quantity:"1", item_price:"299.99", item_description:"One not as big potato"}) %>
                         </ul>
                     </section>
                 </div>
                 <div class="tab-pane fade" id="nav-grocer" role="tabpanel" aria-labelledby="nav-grocer-tab">
                     <section class="grocer-section">
                         <ul class="list-group grocer-list-group">
-                            <li class="list-group-item grocer-list-group-item">
-
-                            </li>
+                            <%- include('partials/profile_page/_grocer_post.ejs', {user_index:"1", item_name:"Potato", item_quantity:"1"}) %>
+                            <%- include('partials/profile_page/_grocer_post.ejs', {user_index:"2", item_name:"Tomatoes", item_quantity:"500"}) %>
                         </ul>
                     </section>
                 </div>
