--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10591,7 +10591,8 @@ body {
   padding: 5rem 0;
 }
 /* Profile Page Content */
-.profile-section {
+.profile-section,
+.marketplace {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%), url("../images/bg-signup.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -10603,6 +10604,9 @@ body {
   font-family: 'Montserrat', sans-serif;
   height: 100vh;
   margin: 50px 0 0;
+}
+.marketplace{
+    padding: 50px 0 0;
 }
 .profile-header-section{
     background: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 75%, #000000 100%);
@@ -10632,6 +10636,10 @@ body {
 }
 .marketplace-nav{
     border:1px solid white;
+}
+.card{
+    border:1px solid white;
+    background: transparent;
 }
 .marketplace-nav:hover,
 .card-body a:hover,
