--- a/views/marketplace.ejs
+++ b/views/marketplace.ejs
@@ -8,17 +8,15 @@
         <section class="marketplace">
            <div class="container">
                <div class="row">
-                   <% include partials/market_page/_categories.ejs %>
                    <div class="col-lg-3">
-                       <h1 class="my-4">Shop Name</h1>
                        <div class="list-group bg-transparent">
-                           <a class="nav-item nav-link marketplace-nav active" id="nav-farmer-tab" data-toggle="tab" href="#nav-farmer" role="tab" aria-controls="nav-farmer">Farmer</a>
-                           <a class="nav-item nav-link marketplace-nav" id="nav-grocer-tab" data-toggle="tab" href="#nav-grocer" role="tab" aria-controls="nav-grocer">Grocer</a>
+                           <a class="nav-item nav-link marketplace-nav active" id="nav-farmer-tab" data-toggle="tab" href="#nav-farmer-market" role="tab" aria-controls="nav-farmer-market">Farmer</a>
+                           <a class="nav-item nav-link marketplace-nav" id="nav-grocer-tab" data-toggle="tab" href="#nav-grocer-market" role="tab" aria-controls="nav-grocer-market">Grocer</a>
                        </div>
                    </div>
                    <!-- Shop area -->
                    <div class="col-lg-9 market-section tab-content" id="nav-tabContent">
-                       <div class="tab-pane fade show active" id="nav-farmer" role="tabpanel" aria-labelledby="nav-farmer-tab">
+                       <div class="tab-pane fade show active" id="nav-farmer-market" role="tabpanel" aria-labelledby="nav-farmer-market-tab">
                            <div class="row">
                                <%- include("partials/market_page/_item.ejs", {item_name: "Tomatoes", item_price:"2.50", item_description:"They're red", item_seller:"Bob D."}) %>
                                <%- include("partials/market_page/_item.ejs", {item_name: "Potatoes", item_price:"3.50", item_description:"From the ground", item_seller:"Jimmy H."}) %>
@@ -28,7 +26,7 @@
                                <%- include("partials/market_page/_item.ejs", {item_name: "Bacon", item_price:"6.50", item_description:"It's...it's bacon", item_seller:"Lauren C."}) %>
                            </div>
                        </div>
-                       <div class="tab-pane fade" id="nav-grocer" role="tabpanel" aria-labelledby="nav-grocer-tab">
+                       <div class="tab-pane fade" id="nav-grocer-market" role="tabpanel" aria-labelledby="nav-grocer-market-tab">
                            <div class="row">
                                <%- include("partials/market_page/_item.ejs", {item_name: "Tomatoes", item_price:"1.50", item_description:"They're red", item_seller:"Bob D."}) %>
                                <%- include("partials/market_page/_item.ejs", {item_name: "Potatoes", item_price:"1.50", item_description:"From the ground", item_seller:"Jimmy H."}) %>
